tests/NormalTests/paczka1/fuzzy1/17335641.err
Error in line 7: 0GSfZuTO2 S28 60,4
Error in line 9: kCyTq0IIGf A858 31,0
Error in line 16: kCyTq0IIGf S779 36,6
Error in line 28: rvfTcCk39S A858 55,4
Error in line 30: rvfTcCk39S S779 34,1
